# LaneDetectionSystem

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  readme.md
app/: CMakeLists.txt  ImageProcessing.cpp  LaneDetection.cpp  LaneInfo.cpp  main.cpp
doxygenDocs/: doxygenConfig
doxygenDocs/html/: ImageProcessingTest_8cpp.html  ImageProcessingTest_8cpp__incl.map  ImageProcessingTest_8cpp__incl.md5  ImageProcessing_8cpp.html  ImageProcessing_8cpp__dep__incl.map  ImageProcessing_8cpp__dep__incl.md5  ImageProcessing_8cpp__incl.map  ImageProcessing_8cpp__incl.md5  ImageProcessing_8hpp.html  ImageProcessing_8hpp__dep__incl.map  ImageProcessing_8hpp__dep__incl.md5  ImageProcessing_8hpp__incl.map  ImageProcessing_8hpp__incl.md5  ImageProcessing_8hpp_source.html  LaneDetectionTest_8cpp.html  LaneDetectionTest_8cpp__incl.map  LaneDetectionTest_8cpp__incl.md5  LaneDetection_8cpp.html  LaneDetection_8cpp__incl.map  LaneDetection_8cpp__incl.md5  LaneDetection_8hpp.html  LaneDetection_8hpp__dep__incl.map  LaneDetection_8hpp__dep__incl.md5  LaneDetection_8hpp__incl.map  LaneDetection_8hpp__incl.md5  LaneDetection_8hpp_source.html  LaneInfo_8hpp_source.html  annotated.html  classImageProcessing-members.html  classImageProcessing.html  classImageProcessingTest-members.html  classImageProcessingTest.html  classImageProcessingTest__coll__graph.map  classLaneDetection.html  (+43 more)
include/: ImageProcessing.hpp  LaneDetection.hpp  LaneInfo.hpp
results/: cppCheck.txt  cppLint.txt
test/: CMakeLists.txt  ImageProcessingTest.cpp  LaneDetectionTest.cpp  LaneInfoTest.cpp  main.cpp  test.cpp
(+53 files in other folders)
